# hd-clustering

./: README.md  pyproject.toml
docs/: conf.py  index.rst
examples/: README.md  main.py  pyproject.toml
examples/data/: README.md
examples/examples/: __init__.py  loaders.py  metrics.py  preprocessing.py
febhd_clustering/: __init__.py  encoder.py  febhd.py
hd_clustering/: __init__.py  encoder.py  febhd.py
