[tool.poetry]
name = "febhd_clustering"
version = "0.1.0"
license = "MIT"
description = "Smart Hyperdimensional Clustering algorithm: FebHD"
readme = "README.md"
repository = "https://gitlab.com/biaslab/hd-clustering"
authors = ["alehd <ale.hdz333@ciencias.unam.mx>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
